deploy/deployment-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: is2-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: is2-db
  template:
    metadata:
      labels:
        app: is2-db
    spec:
      containers:
      - name: is2-db
        image: postgres:11
        ports:
        - containerPort: 5432
        volumeMounts:
              - mountPath: /docker-entrypoint-initdb.d
                name: dump
      volumes:
        - emptyDir: {}
          name: dump
