deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: is2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: is2
  template:
    metadata:
      labels:
        app: is2
    spec:
      containers:
      - name: is2
        image: mecdcme/is2
        ports:
        - containerPort: 8080
